# specctl

./: README.md  pyproject.toml
src/specctl/: cli.py
src/specctl/templates/: SPEC_TEMPLATE.md  email-notification-setting.md  pull_request_template.md  spec-check.yml  team.yml
