[project]
name = "specctl"
version = "0.3.0"
description = "Spec-first workflow helper for student projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0"
]

[project.scripts]
specctl = "specctl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
specctl = ["templates/*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
